# alpha_project

./: Dockerfile  README.md  docker-compose.yml  pyproject.toml  requirements.txt
.alpha/: pyvenv.cfg
app/: backtest.py  bot.py  broker.py  config.py  datafeed.py  risk.py  strategy.py
